// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardStateBox renders error correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "alignSelf": "stretch",
        "borderColor": "#CCCCCC",
        "borderRadius": 8,
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "marginBottom": 10,
        "marginLeft": 30,
        "marginRight": 30,
        "padding": 10,
        "paddingLeft": 10,
        "paddingRight": 10,
      },
      undefined,
      Object {
        "backgroundColor": undefined,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": undefined,
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 18,
            "letterSpacing": 1,
            "lineHeight": 24,
            "paddingRight": 5,
          }
        }
      >
        Error:
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": undefined,
            "fontFamily": "NunitoSans-Bold",
            "fontSize": 12,
            "letterSpacing": 1,
            "lineHeight": 15,
          }
        }
      >
        Error
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexBasis": 40,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Icon
      color={undefined}
      name="ios-alert"
      style={
        Object {
          "backgroundColor": "transparent",
          "fontSize": 30,
          "marginTop": 2,
          "padding": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`CardStateBox renders pending correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "alignSelf": "stretch",
        "borderColor": "#CCCCCC",
        "borderRadius": 8,
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "marginBottom": 10,
        "marginLeft": 30,
        "marginRight": 30,
        "padding": 10,
        "paddingLeft": 10,
        "paddingRight": 10,
      },
      undefined,
      Object {
        "backgroundColor": "rgba(155,155,155,1)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "NunitoSans-Bold",
          "fontSize": 18,
          "letterSpacing": 1,
          "lineHeight": 24,
          "paddingRight": 5,
        }
      }
    >
      Transaction Pending
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexBasis": 40,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#FFFFFF"
      hidesWhenStopped={true}
      size="small"
    />
  </View>
</View>
`;

exports[`CardStateBox renders success correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "alignSelf": "stretch",
        "borderColor": "#CCCCCC",
        "borderRadius": 8,
        "borderWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "marginBottom": 10,
        "marginLeft": 30,
        "marginRight": 30,
        "padding": 10,
        "paddingLeft": 10,
        "paddingRight": 10,
      },
      undefined,
      Object {
        "backgroundColor": "rgba(54,184,123,1)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingLeft": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "NunitoSans-Bold",
          "fontSize": 18,
          "letterSpacing": 1,
          "lineHeight": 24,
        }
      }
    >
      Transaction Successful
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexBasis": 40,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Icon
      color="#FFFFFF"
      name="ios-checkmark-circle"
      style={
        Object {
          "fontSize": 20,
          "marginTop": 2,
        }
      }
    />
  </View>
</View>
`;
